# webnext

./: .gitconfig  .gitignore  .gitmodules  .rustfmt.toml  .tool-versions  Cargo.toml  LICENSE  Makefile.toml  README.md  package.json  pnpm-lock.yaml  rome.json  tsconfig.json  tsconfig.node.json
.config/fish/: config.fish  fish_variables
.local/share/fish/generated_completions/: fstrm_capture.fish  fstrm_replay.fish  iotop.fish  mkinitcpio.fish  unbound-checkconf.fish  unbound-control-setup.fish  unbound-control.fish  unbound-host.fish  unbound.fish
core/: global.d.ts
core/adapters/near-cli-rs/: README.md
core/config/: ceramic.json  suno-bark.config.json  unocss.ts
core/config/handshake-ns/: hsd.conf
core/configuration/: import-map.json
core/lib/gui/component/: mod.ts  service.ts
core/lib/gui/component/atom/: button.tsx
core/lib/gui/component/template/: catalog.tsx
core/provider/text_to_audio/: female_8.npz  main.py  requirements.txt
core/service/: hsd.service
core/service/speaker/: main.py
core/services/croncat/: package.json
core/services/croncat/cli/: check-version.js  print-options.js
core/services/croncat/src/: agent.js  configuration.js  createSystemctl.js  index.js  near.js  rpc.js  slack.js  tasks.js  triggers.js  util.js
core/services/hello-near/: package-lock.json
core/services/hello-near/contract/neardev/: dev-account  dev-account.env
core/services/service-worker/: mod.js
core/utility/near-cli-rs/: README.md
entities/dao/: .gitignore
entities/dao/sputnik-staking/src/: lib.rs  storage_impl.rs  user.rs
entities/dao/sputnikdao-factory2/: build.sh
entities/dao/sputnikdao-factory2/src/: factory_manager.rs  lib.rs
entities/dao/sputnikdao2/src/: bounties.rs  delegation.rs  lib.rs  policy.rs  proposals.rs  types.rs  upgrade.rs  views.rs
entities/dao/sputnikdao2/tests/: test_general.rs  test_upgrade.rs
entities/dao/sputnikdao2/tests/utils/: mod.rs
entities/dao/test-token/src/: lib.rs
entities/multicall/.github/workflows/: tests.yml
features/new_message/: service.js
features/new_message/gui/: input.js
interactions/message_to_gpt4/: service.js
interactions/message_to_hybrid/: service.js
island/app-bar/: params.ts
islands/app-bar/: gui.ts  mod.ts
islands/layout/: config.ts  gui.ts  mod.ts
islands/wallet/: .gitignore  Gemfile  Procfile  README.md
islands/wallet/app/assets/javascripts/: application.js
islands/wallet/app/assets/stylesheets/: application.sass  theme.sass
islands/wallet/app/controllers/: application_controller.rb  pages_controller.rb  sessions_controller.rb  settings_controller.rb  transactions_controller.rb  users_controller.rb
islands/wallet/app/models/: settings_value.rb  transaction.rb  user.rb
islands/wallet/config/: application.rb  routes.rb  secrets.yml
islands/wallet/config/environments/: development.rb  production.rb
islands/wallet/config/initializers/: default_config.rb  session_store.rb  superuser_spawner.rb
islands/wallet/public/: 403.html
navigator/: README.md
navigator/everything/: mod.ts
navigator/everything/view/: generic.tsx
realms/: README.md
realms/desktop/: Cargo.toml
realms/desktop/src/: main.rs  router.rs
realms/desktop/src/routes/: root.rs
realms/promo/: Cargo.toml
realms/promo/src/: main.rs  router.rs
realms/promo/src/routes/: root.rs
render/desktop/: Cargo.toml
render/desktop/src/: main.rs
render/desktop/src/routes/: root.rs
render/promo/: Cargo.toml  main.rs
render/promo/routes/: root.css
render/promo/src/: router.rs
render/promo/src/routes/: root.rs
routes/desktop/: Cargo.toml
routes/desktop/src/: main.rs
routes/desktop/src/routes/: root.rs
routes/promo/: Cargo.toml
service/voyager-next/client/web/: Cargo.toml  Dioxus.toml
service/voyager-next/client/web/src/routes/: root.rs
service/voyager/client/: README.md  index.html  uno.config.ts  vite.config.ts
service/voyager/contract/: Cargo.toml
space/: README.md
space/akaia-demo-static/: akaia-demo-static.caddyfile  index.html
space/akaia-demo/src/: main.rs
space/demo/: Cargo.toml  akaia-demo.caddyfile
space/starfox/: Cargo.toml
space/starfox-desktop/: Dioxus.toml
space/starfox/prototype/: importMap.json
space/starfox/src/: main.rs
space/starfox/src/routes/: root.rs
spaces/desktop/: Cargo.toml
spaces/desktop/src/: main.rs  router.rs
spaces/desktop/src/routes/: root.rs
spaces/promo/: Cargo.toml
spaces/promo/src/: router.rs
spaces/promo/src/routes/: root.rs
spaces/starfox-desktop/: Cargo.toml  Dioxus.toml
spaces/starfox-desktop/prototype/: server.tsx
spaces/starfox-desktop/src/routes/: root.rs
system/: Cargo.toml  main.rs
system/asset/: manifest.webmanifest
system/starfox-web4/: Cargo.toml
systems/starfox/: Cargo.toml
systems/starfox-gateway/: Cargo.toml
(+16 files in other folders)
