[workspace]
members = [
	"entity/sputnik-dao/sputnik-staking",
	"entity/sputnik-dao/sputnikdao2",
	"entity/sputnik-dao/sputnikdao-factory2",
	"entity/sputnik-dao/test-token",
	"spaces/starfox-desktop",
	"spaces/akaia-demo",
]

[workspace.package]
keywords = ["web4", "cloud", "ai-powered", "os"]
license = "LGPL"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
panic = "abort"
overflow-checks = true
