[package]
name = "akaia_desktop-route"
version = "0.2.0"
edition = "2021"
description = "A desktop environment"
readme = "README.md"
categories = ["gui", "wasm"]
authors = ["Carina root.akaia.near <carina@dmail.ai>"]
autobins = false
autoexamples = false
autotests = false
autobenches = false

[[bin]]
name = "akaia_desktop-route"
path = "src/main.rs"

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus.git" }
dioxus-router = { git = "https://github.com/DioxusLabs/dioxus.git" }
dioxus-web = { git = "https://github.com/DioxusLabs/dioxus.git" }

[dev-dependencies]
# deno = "1.31.3"
# dioxus-cli = { git = "https://github.com/DioxusLabs/cli" }
