[package]
name = "akaia-starfox"
version = "0.2.0"
edition = "2021"
description = "A blockchain-driven cloud OS"
readme = "README.md"
categories = ["gui", "wasm"]
authors = ["Carina root.akaia.near <carina@dmail.ai>"]
autobins = false
autoexamples = false
autotests = false
autobenches = false

[dependencies]
near-sdk = "4.0.0-pre.7"

[lib]
crate-type = ["cdylib"]
path = "main.rs"
