[package]
name = "voyager-web-client"
version = "0.2.0"
edition = "2021"
description = "A desktop environment for Starfox OS"
readme = "README.md"
categories = ["gui", "wasm"]
authors = ["Carina.Akaia.near <carina@dmail.ai>"]
autobins = false
autoexamples = false
autotests = false
autobenches = false

[[bin]]
name = "voyager-web-client"
path = "src/main.rs"

[dependencies]
async-std = "1.12.0"
dioxus = "0.4.0"
dioxus-router = "0.4.0"
dioxus-web = "0.4.0"
gloo = "0.10.0"
unocss-classes = { version = "1.1.1", features = ["runtime"] }
web-sys = { version = "0.3.64" }
log = "0.4.20"
wasm-logger = "0.2.0"

[dev-dependencies]
# deno = "1.31.3"
# dioxus-cli = { git = "https://github.com/DioxusLabs/cli" }
